GearsetPOC/force-app/main/default/objects/EDCS__c/EDCS__c.object-meta.xml
<CustomObject>
    <label>EDCS</label>
    <nameField>
        <displayFormat>EDCS-{0000000000}</displayFormat>
        <label>EDCS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDCS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>