GearsetPOC/force-app/main/default/objects/EDCS__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <label>Creation Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>