GearsetPOC/force-app/main/default/objects/EDCS__c/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <label>Member Number</label>
    <length>17</length>
    <type>Text</type>
</CustomField>