GearsetPOC/force-app/main/default/objects/EDCS__c/fields/Train_Number__c.field-meta.xml
<CustomField>
    <fullName>Train_Number__c</fullName>
    <label>Train Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>